# Qt-Course-Scheduling-Application-

./: Admin.h  CMakeLists.txt  ProjectTemplate.pro  README.md  admincoursedecision.h  adminpermissions.ui.autosave  adminproxy.h  adminstudentaction.cpp  adminstudentaction.ui  course.cpp  course.h  coursecatalog.cpp  coursepage.cpp  coursepage.ui  courses.txt  coursetimetable.h  coursetimetable.ui  createaccountpage.h  falltermpage.h  loginorcreate.cpp  loginorcreate.h  loginorcreate.ui  mainwindow.h  mainwindow.ui  notifications.cpp  notifications.h  notifications.ui  prerequisitepage.h  student.cpp  student.h  studentCourseInfo.txt  studentprogresscheck.ui  testfile1.cpp  user.h  wintertermpage.cpp  wintertermpage.h  wintertermpage.ui
code/: admincoursedecision.cpp  admincoursedecision.ui  adminselectaction.cpp  adminselectaction.h  adminselectaction.ui  adminstudentaction.h  coursecatalog.h  coursepage.cpp  coursepage.h  coursetimetable.cpp  createaccountpage.cpp  createaccountpage.ui  falltermpage.cpp  falltermpage.ui  main.cpp  mainwindow.cpp  notifications.txt  prerequisitepage.cpp  prerequisitepage.ui  studentprogresscheck.cpp  studentprogresscheck.h  user.cpp  userlogininfo.txt
